--- a/angular.json
+++ b/angular.json
@@ -34,13 +34,9 @@
             ],
             "scripts": [
               "src/assets/js/drag-drop.js",
-              "src/assets/js/editor.js"
-            ],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+              "src/assets/js/editor.js",
+              "src/assets/js/configurator.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -98,6 +94,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@videogular/ngx-videogular/fonts/videogular.css",
               "src/styles.scss"
             ],
             "scripts": []
