--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.7",
     "@auth0/angular-jwt": "^5.2.0",
+    "@videogular/ngx-videogular": "^8.0.0",
     "codemirror": "^5.65.16",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "^17.0.7",
     "@angular/cli": "^17.0.7",
     "@angular/compiler-cli": "^17.0.0",
+    "@types/core-js": "^2.5.8",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
