--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "cms-klient": {
+    "www": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/cms-klient",
+            "outputPath": "dist/www",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -35,7 +35,9 @@
             "scripts": [
               "src/assets/js/drag-drop.js",
               "src/assets/js/editor.js",
-              "src/assets/js/configurator.js"
+              "src/assets/js/configurator.js",
+              "src/assets/js/guest.js",
+              "node_modules/video.js/dist/video.min.js"
             ]
           },
           "configurations": {
@@ -66,10 +68,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "cms-klient:build:production"
+              "buildTarget": "www:build:production"
             },
             "development": {
-              "buildTarget": "cms-klient:build:development"
+              "buildTarget": "www:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -77,7 +79,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "cms-klient:build"
+            "buildTarget": "www:build"
           }
         },
         "test": {
