--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "video.js": "^8.12.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
