--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@videogular/ngx-videogular": "^8.0.0",
     "codemirror": "^5.65.16",
     "express": "^4.18.2",
+    "monaco-editor": "^0.44.0",
+    "ngx-monaco-editor-v2": "^17.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "video.js": "^8.12.0",
@@ -37,13 +39,16 @@
     "@types/core-js": "^2.5.8",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
+    "jest": "^29.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-jest": "^29.1.2",
     "typescript": "~5.2.2"
   }
 }
