--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "baseUrl": "./src",
     "paths": {
       "@directives/*": ["app/directives/*"],
-      "@config": ["config.ts"],
+      "@config": ["environments/environment.ts"],
       "@services/*": ["app/services/*"],
       "@guards/*": ["app/guards/*"]
     }
