--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "e2e": "ng e2e",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -39,16 +40,14 @@
     "@types/core-js": "^2.5.8",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/jest": "^29.5.12",
     "@types/node": "^18.18.0",
+    "cypress": "^13.9.0",
     "jasmine-core": "~5.1.0",
-    "jest": "^29.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ts-jest": "^29.1.2",
     "typescript": "~5.2.2"
   }
 }
